examples/errors/i0504.sdm
module example <https://example.com/api> is

  structure Foo is
    name -> string
    age -> integer
  end

end
